add: home component and add: styles for app and home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
+<header class="header">
+    <div class="header-left">
+        <a [routerLink]="['/']" class="logo">
+        <p class="logo-title">Quiz</p>
+        <img class="logo-image" src="../assets/logo-icon.png" alt="logo">
+        </a>
+    </div>
+    <div class="header-right">
+        <a [routerLink]="['/']">Home</a>
+        <a [routerLink]="['/topics']">Topics</a>
+    </div>
+</header>
 <router-outlet></router-outlet>
+<footer class="footer">
+    &copy; 2024 Yerzhan Rsaliyev. All rights reserved.
+</footer>
