--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -56,6 +56,7 @@ section {
 .rules-title {
     font-size: 50px;
     margin-bottom: 20px;
+    border-bottom: 5px solid var(--main);
 }
 
 .rules-description {
