--- a/src/app/topics/topics.component.css
+++ b/src/app/topics/topics.component.css
@@ -24,3 +24,10 @@
 .topic:hover {
     cursor: pointer;
 }
+
+@media (max-width: 767px) {
+    .topic {
+        width: 450px;
+        font-size: 20px;
+    }
+}
