--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="home-container">
     <section class="greetings">
-        <h2>Welcome!</h2>
+        <h2>Қош келдіңіз!</h2>
     </section>
     <section class="rules">
-        <h3 class="rules-title">Rules:</h3>
+        <h3 class="rules-title">Ережелер:</h3>
         <div class="rules-description">
             <ol>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -16,6 +16,6 @@
                 <li> In rutrum odio viverra nunc aliquet feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
             </ol>
         </div>
-        <a [routerLink]="['/topics']">Go!</a>
+        <a [routerLink]="['/topics']">Бастайық!</a>
     </section>
 </div>
