--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <header class="header">
     <div class="header-left">
         <a [routerLink]="['/']" class="logo">
-        <p class="logo-title">Quiz</p>
+        <p class="logo-title">Int.oyyn</p>
         <img class="logo-image" src="../assets/logo-icon.png" alt="logo">
         </a>
     </div>
     <div class="header-right">
-        <a [routerLink]="['/']">Home</a>
-        <a [routerLink]="['/topics']">Topics</a>
+        <a [routerLink]="['/']">Негізгі бет</a>
+        <a [routerLink]="['/topics']">Тақырыптар</a>
     </div>
 </header>
 <router-outlet></router-outlet>
