--- a/src/app/topics/topics.component.html
+++ b/src/app/topics/topics.component.html
@@ -1,5 +1,5 @@
 <div class="topics-container">
-    <h2 class="title">Тақырыптар</h2>
+    <h2 class="title">Категория</h2>
     <div *ngFor="let topic of topics" class="topics">
         <button (click)="goToQuestions(topic.id)" class="topic">{{topic.name}}</button>
     </div>
