--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,14 +6,12 @@
         <h3 class="rules-title">Ережелер:</h3>
         <div class="rules-description">
             <ol>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Integer et ultrices neque. Aliquam libero libero, lobortis quis fermentum venenatis, vehicula ac sapien.</li>
-                <li>Sed auctor auctor massa ut mattis. Aliquam erat volutpat. Morbi elementum lacus ac diam tincidunt volutpat.</li>
-                <li>Aenean lectus sem, hendrerit eget urna id, mattis maximus eros. In porta elit libero, quis faucibus purus suscipit vitae. 
-                Fusce eros mauris, porta vitae lobortis vel, ultricies a ipsum. </li>
-                <li>Donec non condimentum ipsum, et efficitur nibh. Sed aliquam sed eros eu lobortis. 
-                Vivamus eu arcu ac dolor iaculis fermentum eu a dolor</li>
-                <li> In rutrum odio viverra nunc aliquet feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
+                <li>Ойын басталғанға дейін қатысушылар топтарга бөлінеді.</li>
+                <li>Әр топ капитанды және өз тобының атын таңдайды.</li>
+                <li>Топтар сұрақтарына кезекпен жауап береді. Ойлар мен талқылаулар үшін топтарға 2 минут беріледі. 
+                Жауап болмаған немесе дұрыс емес жауап болған жағдайда, басқа топтар сол сұраққа жауап беріп, 
+                өздеріне ұпай алуға мүмкіндік алады.</li>
+                <li>Ең көп ұпай жинаған топ жеңеді.</li>
             </ol>
         </div>
         <a [routerLink]="['/topics']">Бастайық!</a>
